--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -327,7 +327,7 @@ i.fas, i.fab, i.far {
   box-shadow: $shadow-2xl;
   padding: $space-4xl $space-xl;
   transition: right $transition-smooth;
-  z-index: $z-fixed;
+  z-index: $z-modal;
 
   @include from-desktop {
     display: none;
